--- a/index.html
+++ b/index.html
@@ -27,8 +27,32 @@
                         <% } %>
                 </div>
                 <% } %>
+                <div id="about" class="row">
+                    <div class="name_wrapper span2">
+                        <div class="name_content">
+                            <h3><a href="#about">About</a></h3>
+                        </div>
+                    </div>
+                        <div class="color_box_wrapper span2" color-data="<%=colors[0].colors[0]%>" style="background-color: <%=colors[0].colors[0]%>;">
+                        <p class="color_box_content promote">Palettes come from 
+                            <a href="http://design-seeds.com/">Design Seeds&copy;</a></p>
+                        </div>
+                        <div class="color_box_wrapper span2" color-data="<%=colors[0].colors[1]%>" style="background-color: <%=colors[0].colors[1]%>;">
+                        <p class="color_box_content"><span>♥</span> by <a href="http://youknowmymind.com">hbc</a></p>
+                        </div>
+                        <div class="color_box_wrapper span2" color-data="<%=colors[0].colors[2]%>" style="background-color: <%=colors[0].colors[2]%>;">
+                        <p class="color_box_content promote">Powered by <a href="http://pages.github.com">GitHub page</a> & <a href="http://sae.sina.com.cn">SAE</a></p>
+                        </div>
+                        <div class="color_box_wrapper span2" color-data="<%=colors[0].colors[3]%>" style="background-color: <%=colors[0].colors[3]%>;">
+                        <p class="color_box_content">View <a href="https://github.com/bcho/color">code</a></p>
+                        </div>
+                        <div class="color_box_wrapper span2" color-data="<%=colors[0].colors[4]%>" style="background-color: <%=colors[0].colors[4]%>;">
+                        <p class="color_box_content promote">Protected by <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">CC BY-NC-ND 3.0</a></p>
+                        </div>
+                </div>
+                </div>
                 </script>
-            </div>        
+            </div> 
         </div>
     </body>
     <script type="text/javascript" src="static/js/template.js"></script>
